# centaur

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Justfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  package.json  pnpm-lock.yaml  pyproject.toml
centaur_charts/: README.md  __init__.py  critic.py  helpers.py  pyproject.toml  router.py  style.py
centaur_charts/crypto/: __init__.py  brand_colors.py
centaur_charts/handlers/: __init__.py  _common.py  comparison.py  composition.py  distribution.py  finance.py  layout.py  relationship.py  timeseries.py
centaur_charts/styles/: centaur-dark.mplstyle  centaur-editorial.mplstyle  centaur-light.mplstyle
centaur_charts/tests/: test_router.py
centaur_sdk/: README.md  __init__.py  pyproject.toml  tool_sdk.py
docs/: 1password-setup.md  legal_knowledge_base.json  legal_policy_v1.json  package-lock.json  package.json  sidebar.ts  vocs.config.ts  wrangler.jsonc
monitoring/: nginx.conf
plugins/: README.md
sandbox/: Dockerfile  SYSTEM_PROMPT.md  SYSTEM_PROMPT_LEGAL.md  call.sh  entrypoint.sh
scripts/: auth-bootstrap.js  backfill_titles.py  build_self_improve_notifier_input.py  legal_eval_runner.py  qa-agent-runtime-flow.sh  qa-full-tools.py  qa_agent_runtime_flow.py  run-plugin  smoke-k8s-sandbox-backend.sh
services/secrets/: Dockerfile  pyproject.toml
services/secrets/secret_manager/: app.py
tests/: test_agent_thread_sync.py  test_harness_events.py  test_threads_stream_ui.py
workflows/: company_context_documents.py  morning_market_brief.py  paradigm_pulse_daily.py  policy_news_monitor.py  (+4 more)
(+312 files in other folders)
