[project]
name = "centaur-charts"
version = "0.1.0"
description = "Matplotlib defaults, theme helpers, and chart routing for Centaur"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.optional-dependencies]
extras = [
    "seaborn>=0.13",
    "mplfinance>=0.12",
    "squarify>=0.4",
    "joypy>=0.2",
    "july>=0.1",
    "pywaffle>=1.1",
    "cmcrameri>=1.9",
    "adjustText>=1.0",
    "flexitext>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "styles/*.mplstyle",
    "crypto/*.py",
    "handlers/*.py",
]
