[project]
name = "centaur-secrets"
version = "0.1.0"
description = "Secret manager HTTP sidecar for Centaur"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "centaur-sdk[onepassword]",
    "lmnr>=0.5.2,<0.5.3",
]

[tool.uv.sources]
centaur-sdk = { path = "../../centaur_sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
